--- a/genesis-ui/style/components/_navbar.scss
+++ b/genesis-ui/style/components/_navbar.scss
@@ -15,7 +15,6 @@ $sidenavBreakPoint :variables.$sidenavBreakPoint;
         align-items: unset;
         position: relative;
         width: 100%;
-        z-index: 1;
         transition: all .8s ease-in-out;
         padding: 0;
         padding-left: variables.$sidenavWidth;
